4-SSL-with-Tetratelabs/1-helloworld-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: helloworld
